add 123 to index.html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
         <p>It is the densest planet in the Solar System.</p>
         <p>Of the four rocky planets, it is the largest and most massive.</p>
         <p>Earth is about eight light-minutes away from the Sun</p>
-        <p>and orbits it, taking a year (about 365.25 days)</p>
+        <p>and orbits it, taking a year (about 365.25 days) 123</p>
     </body>
 </html>
