--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>World</h1>
+        <h1>World description</h1>
         <h3> Our world description </h3>
         <p>Earth is an ellipsoid with a circumference of about 40,000 km.</p>
         <p>It is the densest planet in the Solar System.</p>
